# OPESY-OS-Emulator

./: .clang-format  CMakeLists.txt  README.md  config.txt  main.cpp
.github/workflows/: cmake-single-platform.yml
src/: ArithmeticInstruction.cpp  ArithmeticInstruction.h  Config.cpp  Config.h  ConsoleManager.cpp  ConsoleManager.h  DeclareInstruction.cpp  DeclareInstruction.h  FlatMemoryAllocator.cpp  FlatMemoryAllocator.h  ForInstruction.cpp  ForInstruction.h  IMemoryAllocator.h  Instruction.cpp  Instruction.h  InstructionFactory.cpp  InstructionFactory.h  MainScreen.cpp  MainScreen.h  PagingAllocator.cpp  PagingAllocator.h  PrintInstruction.cpp  PrintInstruction.h  Process.cpp  Process.h  ProcessScheduler.cpp  ProcessScheduler.h  ProcessScreen.cpp  ProcessScreen.h  ReadInstruction.cpp  ReadInstruction.h  Screen.h  SleepInstruction.cpp  SleepInstruction.h  WriteInstruction.cpp  WriteInstruction.h  main.cpp
